@@ -1,14 +1,17 @@
 # 🛒 E-Ticaret Gerçek Zamanlı Arama Analiz Sistemi
 
 <p align="center">
-  <img src="https://img.shields.io/badge/Java-21-orange?style=for-the-badge&logo=openjdk" alt="Java 21">
+  <img src="https://img.shields.io/badge/Java-17%20%7C%2021-orange?style=for-the-badge&logo=openjdk" alt="Java">
   <img src="https://img.shields.io/badge/Spring%20Boot-3.2.0-green?style=for-the-badge&logo=springboot" alt="Spring Boot">
   <img src="https://img.shields.io/badge/Apache%20Kafka-3.6.0-black?style=for-the-badge&logo=apachekafka" alt="Kafka">
   <img src="https://img.shields.io/badge/Apache%20Spark-3.5.0-orange?style=for-the-badge&logo=apachespark" alt="Spark">
+  <img src="https://img.shields.io/badge/MongoDB-7.0-green?style=for-the-badge&logo=mongodb" alt="MongoDB">
   <img src="https://img.shields.io/badge/Docker-Ready-blue?style=for-the-badge&logo=docker" alt="Docker">
 </p>
 
-Apache Kafka ve Spark Structured Streaming kullanarak e-ticaret platformlarındaki arama davranışlarını gerçek zamanlı analiz eden bir Big Data projesi.
+<p align="center">
+  Apache Kafka, Spark Streaming ve MongoDB kullanarak e-ticaret platformlarındaki arama davranışlarını gerçek zamanlı analiz eden bir Big Data projesi.
+</p>
 
 ---
 
@@ -17,103 +20,117 @@ Apache Kafka ve Spark Structured Streaming kullanarak e-ticaret platformlarında
 - [Proje Hakkında](#-proje-hakkında)
 - [Mimari](#-mimari)
 - [Teknolojiler](#-teknolojiler)
+- [Gereksinimler](#-gereksinimler)
 - [Kurulum](#-kurulum)
-- [Kullanım](#-kullanım)
-- [API Dokümantasyonu](#-api-dokümantasyonu)
+- [Çalıştırma](#-çalıştırma)
 - [Ekran Görüntüleri](#-ekran-görüntüleri)
-- [Katkıda Bulunma](#-katkıda-bulunma)
+- [API Dokümantasyonu](#-api-dokümantasyonu)
+- [Proje Yapısı](#-proje-yapısı)
 
 ---
 
 ## 🎯 Proje Hakkında
 
-Bu proje, e-ticaret platformlarındaki kullanıcı arama davranışlarını simüle ederek gerçek zamanlı analiz yapar. Sistem iki ana bileşenden oluşur:
+Bu proje, e-ticaret platformlarındaki kullanıcı arama davranışlarını simüle ederek **gerçek zamanlı analiz** yapar.
 
-- **Producer (API)**: Kullanıcı aramalarını simüle eder ve Kafka'ya gönderir
-- **Consumer (Spark)**: Kafka'dan verileri okur ve gerçek zamanlı istatistikler üretir
+### ✨ Özellikler
 
-### Kullanım Alanları
-- 📊 Trend analizi
-- 🔍 En çok aranan ürünlerin tespiti
-- 🗺️ Bölgesel arama eğilimleri
-- 📈 Gerçek zamanlı dashboard'lar
+- 🔍 **Gerçek Zamanlı Arama Analizi** - Hangi ürünler en çok aranıyor?
+- 🗺️ **Bölgesel Analiz** - Hangi şehirlerden arama yapılıyor?
+- 📊 **Canlı Dashboard** - Chart.js ile görselleştirme
+- 🚀 **Simülasyon Modu** - Otomatik veri üretimi
+- 💾 **Kalıcı Depolama** - MongoDB ile veri saklama
+- 📈 **Batch Analizi** - Geçmiş verilerin analizi
 
 ---
 
 ## 🏗 Mimari
 
 ```
+                                    ┌─────────────────┐
+                                    │    FRONTEND     │
+                                    │  (HTML/JS/CSS)  │
+                                    └────────┬────────┘
+                                             │
+                                             ▼
 ┌─────────────────────────────────────────────────────────────────────────┐
-│                           KULLANICI                                     │
-│                              │                                          │
-│                              ▼                                          │
-│  ┌───────────────────────────────────────────────────────────────────┐  │
-│  │                    E-TİCARET API (Producer)                       │  │
-│  │                    Spring Boot 3.2.0 - Java 21                    │  │
-│  │                                                                   │  │
-│  │   /api/search ──────▶ Simüle Veri Üret ──────▶ Kafka Producer    │  │
-│  │   /api/stop                                                       │  │
-│  │   /api/status                                                     │  │
-│  └───────────────────────────────────────────────────────────────────┘  │
-│                              │                                          │
-│                              ▼                                          │
-│  ┌───────────────────────────────────────────────────────────────────┐  │
-│  │                     APACHE KAFKA                                  │  │
-│  │                Topic: search-analysisv2                           │  │
-│  │   ┌─────────────┐  ┌─────────────┐  ┌─────────────┐               │  │
-│  │   │ Partition 0 │  │ Partition 1 │  │ Partition 2 │               │  │
-│  │   └─────────────┘  └─────────────┘  └─────────────┘               │  │
-│  └───────────────────────────────────────────────────────────────────┘  │
-│                              │                                          │
-│                              ▼                                          │
-│  ┌───────────────────────────────────────────────────────────────────┐  │
-│  │                 SPARK STREAMING (Consumer)                        │  │
-│  │                 Apache Spark 3.5.0 - Java 17                      │  │
-│  │                                                                   │  │
-│  │   Kafka Source ──▶ JSON Parse ──▶ Aggregation ──▶ Console Output  │  │
-│  │                                                                   │  │
-│  │   • En çok aranan ürünler                                         │  │
-│  │   • Bölgesel arama dağılımı                                       │  │
-│  │   • Zaman bazlı analiz                                            │  │
-│  └───────────────────────────────────────────────────────────────────┘  │
-│                                                                         │
+│                         E-TİCARET API                                    │
+│                      (Spring Boot 3.2.0)                                │
+│                                                                          │
+│   POST /api/search ──────► Kafka Producer ──────► search-analysisv2     │
+│   GET /api/stats/* ◄────── MongoDB                                      │
 └─────────────────────────────────────────────────────────────────────────┘
+                                             │
+                                             ▼
+┌─────────────────────────────────────────────────────────────────────────┐
+│                         APACHE KAFKA                                     │
+│                                                                          │
+│                    Topic: search-analysisv2                             │
+└─────────────────────────────────────────────────────────────────────────┘
+                                             │
+                           ┌─────────────────┴─────────────────┐
+                           ▼                                   ▼
+            ┌──────────────────────────┐       ┌──────────────────────────┐
+            │    SPARK STREAMING       │       │      SPARK BATCH         │
+            │    (Consumer)            │       │      (Analiz)            │
+            │                          │       │                          │
+            │  Kafka ─► Aggregation    │       │  MongoDB ─► Raporlama    │
+            │           │              │       │                          │
+            └───────────┼──────────────┘       └──────────────────────────┘
+                        │                                   │
+                        ▼                                   ▼
+            ┌─────────────────────────────────────────────────────────────┐
+            │                        MONGODB                               │
+            │                                                              │
+            │   search_stats   │   region_stats   │   batch_reports       │
+            └─────────────────────────────────────────────────────────────┘
 ```
 
 ---
 
 ## 🛠 Teknolojiler
 
-| Teknoloji | Versiyon | Kullanım Amacı |
-|-----------|----------|----------------|
-| Java | 21 | API geliştirme |
-| Java | 17 | Spark uygulaması |
-| Spring Boot | 3.2.0 | REST API framework |
-| Apache Kafka | 3.6.0 | Mesaj kuyruğu |
-| Apache Spark | 3.5.0 | Stream processing |
-| Docker | - | Altyapı yönetimi |
-| Zookeeper | 7.4.0 | Kafka koordinasyonu |
-| Maven | 3.9.6 | Bağımlılık yönetimi |
+| Teknoloji | Versiyon | Kullanım |
+|-----------|----------|----------|
+| **Java** | 17+ | Backend geliştirme |
+| **Spring Boot** | 3.2.0 | REST API |
+| **Apache Kafka** | 3.6.0 | Mesaj kuyruğu |
+| **Apache Spark** | 3.5.0 | Stream & Batch processing |
+| **MongoDB** | 7.0 | NoSQL veritabanı |
+| **Chart.js** | 4.x | Dashboard grafikleri |
+| **Docker** | - | Container yönetimi |
 
 ---
 
-## 📦 Kurulum
+## 📦 Gereksinimler
 
-### Gereksinimler
+- ☕ **Java 17+** (Spark için Java 17 önerilir)
+- 🐳 **Docker Desktop**
+- 📦 **Maven 3.6+** (veya Maven Wrapper)
+- 🪟 **Windows için:** Hadoop winutils.exe
 
-- ☕ Java 17+ (JDK)
-- 🐳 Docker & Docker Compose
-- 📦 Maven 3.6+
-- 🪟 Windows için: Hadoop winutils.exe
+### Windows için Hadoop Kurulumu
+
+1. [Hadoop 3.4.1](https://hadoop.apache.org/releases.html) indirin
+2. `C:\hadoop-3.4.1` klasörüne çıkarın
+3. [winutils.exe](https://github.com/cdarlint/winutils) dosyasını `C:\hadoop-3.4.1\bin\` klasörüne kopyalayın
+4. Ortam değişkeni ayarlayın:
+   ```cmd
+   setx HADOOP_HOME "C:\hadoop-3.4.1"
+   ```
+
+---
+
+## 🚀 Kurulum
 
 ### 1. Projeyi Klonlayın
 
 ```bash
-git clone https://github.com/kullaniciadi/eticaret-analysis.git
-cd eticaret-analysis
+git clone https://github.com/kullaniciadi/eticaret-bigdata.git
+cd eticaret-bigdata
 ```
 
-### 2. Kafka Altyapısını Başlatın
+### 2. Docker Altyapısını Başlatın
 
 ```bash
 cd eticaret-api
@@ -121,77 +138,59 @@ docker-compose up -d
 ```
 
 Bu komut şunları başlatır:
-- 🦓 **Zookeeper** → `localhost:2181`
-- 📨 **Kafka** → `localhost:9092`
-- 🖥️ **Kafka UI** → `http://localhost:8080`
-
-### 3. Windows için Hadoop Kurulumu
-
-```powershell
-# HADOOP_HOME environment variable ayarlayın
-setx HADOOP_HOME "C:\hadoop-3.4.1"
-
-# veya PowerShell ile
-$env:HADOOP_HOME = "C:\hadoop-3.4.1"
-```
-
-> ⚠️ **Not**: `winutils.exe` dosyasını `%HADOOP_HOME%\bin` klasörüne yerleştirin.
+- 🦓 **Zookeeper** → localhost:2181
+- 📨 **Kafka** → localhost:9092
+- 🖥️ **Kafka UI** → http://localhost:8080
+- 🍃 **MongoDB** → localhost:27017
+- 📊 **Mongo Express** → http://localhost:8082
 
 ---
 
-## 🚀 Kullanım
+## ▶️ Çalıştırma
 
-### Adım 1: API'yi Başlatın
+### Terminal 1 - API
 
 ```bash
 cd eticaret-api
-mvnw.cmd spring-boot:run
+.\mvnw.cmd spring-boot:run
 ```
+> API: http://localhost:8081
 
-API `http://localhost:8081` adresinde çalışmaya başlar.
-
-### Adım 2: Spark Consumer'ı Başlatın
-
-Yeni bir terminal açın:
+### Terminal 2 - Spark Consumer
 
 ```bash
 cd eticaret-consumer
-mvnw.cmd exec:java
+set JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-17.0.16.8-hotspot
+set HADOOP_HOME=C:\hadoop-3.4.1
+set PATH=%HADOOP_HOME%\bin;%PATH%
+set MAVEN_OPTS=--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+.\mvnw.cmd exec:java
 ```
 
-### Adım 3: Veri Üretimini Başlatın
+### Frontend
 
-Tarayıcınızda veya curl ile:
+Tarayıcıda açın:
+- **Ana Sayfa:** `eticaret-frontend/index.html`
+- **Dashboard:** `eticaret-frontend/dashboard.html`
+
+### Simülasyonu Başlatın
 
 ```bash
-# Varsayılan (1 saniye aralıkla)
 curl http://localhost:8081/api/search
-
-# 500ms aralıkla
-curl "http://localhost:8081/api/search?intervalMs=500"
 ```
 
-### Adım 4: Sonuçları İzleyin
+---
 
-Spark Consumer terminalinde gerçek zamanlı istatistikler görünecektir:
+## 📸 Ekran Görüntüleri
 
-```
-╔══════════════════════════════════════════╗
-║  ARAMA İSTATİSTİKLERİ - Batch: 5         ║
-╠══════════════════════════════════════════╣
-║  Toplam farklı arama: 6                  ║
-╚══════════════════════════════════════════╝
+### Ana Sayfa
+Modern arama arayüzü, hızlı arama etiketleri ve simülasyon kontrolleri.
 
-📊 En Çok Aranan Ürünler:
-+----------+-----+
-|search    |count|
-+----------+-----+
-|telefon   |25   |
-|laptop    |18   |
-|ayakkabı  |15   |
-|kulaklık  |12   |
-+----------+-----+
-```
+### Dashboard
+Gerçek zamanlı grafikler, en çok aranan ürünler ve bölge dağılımı.
+
+### Spark Console
+Streaming analiz sonuçları ve MongoDB yazma durumu.
 
 ---
 
@@ -199,43 +198,28 @@ Spark Consumer terminalinde gerçek zamanlı istatistikler görünecektir:
 
 ### Endpoints
 
-| Method | Endpoint | Açıklama | Parametreler |
-|--------|----------|----------|--------------|
-| GET | `/api/search` | Veri üretimini başlat | `intervalMs` (opsiyonel, default: 1000) |
-| GET | `/api/stop` | Veri üretimini durdur | - |
-| GET | `/api/status` | Sistem durumunu göster | - |
-| GET | `/actuator/health` | Sağlık kontrolü | - |
+| Method | Endpoint | Açıklama |
+|--------|----------|----------|
+| `GET` | `/api/search` | Simülasyonu başlat |
+| `GET` | `/api/stop` | Simülasyonu durdur |
+| `GET` | `/api/status` | Sistem durumu |
+| `GET` | `/api/stats/searches` | En çok arananlar |
+| `GET` | `/api/stats/regions` | Bölge dağılımı |
+| `GET` | `/api/stats/dashboard` | Dashboard verileri |
 
-### Örnek Yanıtlar
+### Örnek Yanıt
 
-**Veri Üretimi Başlat:**
 ```json
 {
   "status": "success",
-  "message": "Veri üretimi başlatıldı!",
-  "interval": "1000ms",
-  "stopEndpoint": "/api/stop"
-}
-```
-
-**Durum Sorgula:**
-```json
-{
-  "isRunning": true,
-  "messageCount": 150,
-  "cities": ["Ankara", "İstanbul", "Mersin", ...],
-  "products": ["telefon", "laptop", "ayakkabı", ...]
-}
-```
-
-### Kafka Mesaj Formatı
-
-```json
-{
-  "search": "telefon",
-  "region": "İstanbul",
-  "current_ts": "2023-05-15 14:32:00",
-  "timestamp": "2024-12-06 17:00:00"
+  "topSearches": [
+    {"search": "telefon", "count": 150},
+    {"search": "laptop", "count": 120}
+  ],
+  "regionDistribution": [
+    {"region": "İstanbul", "count": 200},
+    {"region": "Ankara", "count": 150}
+  ]
 }
 ```
 
@@ -244,111 +228,97 @@ Spark Consumer terminalinde gerçek zamanlı istatistikler görünecektir:
 ## 📁 Proje Yapısı
 
 ```
-├── eticaret-api/                    # Producer API
+eticaret-bigdata/
+│
+├── eticaret-api/                    # Spring Boot API (Producer)
 │   ├── src/main/java/
 │   │   └── com/bigdatacompany/eticaret/
-│   │       ├── Application.java           # Spring Boot başlatıcı
-│   │       ├── MessageProducer.java       # Kafka producer
-│   │       └── api/
-│   │           └── SearchController.java  # REST endpoints
-│   ├── src/main/resources/
-│   │   └── application.properties         # Konfigürasyon
-│   ├── docker-compose.yml                 # Kafka altyapısı
+│   │       ├── Application.java
+│   │       ├── MessageProducer.java
+│   │       ├── api/
+│   │       │   ├── SearchController.java
+│   │       │   └── StatsController.java
+│   │       ├── config/
+│   │       │   └── CorsConfig.java
+│   │       ├── model/
+│   │       └── repository/
+│   ├── docker-compose.yml
 │   └── pom.xml
 │
-├── eticaret-consumer/               # Consumer (Spark)
+├── eticaret-consumer/               # Spark Streaming (Consumer)
 │   ├── src/main/java/
 │   │   └── com/bigdatacompany/eticaret/consumer/
-│   │       └── SparkConsumerApplication.java  # Spark streaming
+│   │       ├── SparkConsumerApplication.java
+│   │       └── SparkBatchApplication.java
 │   └── pom.xml
+│
+├── eticaret-frontend/               # Web Arayüzü
+│   ├── index.html
+│   ├── dashboard.html
+│   ├── css/style.css
+│   └── js/
+│       ├── app.js
+│       └── dashboard.js
 │
 └── README.md
 ```
 
 ---
 
-## 🔧 Konfigürasyon
-
-### API (application.properties)
-
-```properties
-# Server
-server.port=8081
-
-# Kafka
-kafka.bootstrap.servers=localhost:9092
-kafka.topic=search-analysisv2
-
-# Actuator
-management.endpoints.web.exposure.include=health,info
-```
-
-### Consumer (SparkConsumerApplication.java)
-
-```java
-private static final String KAFKA_BOOTSTRAP_SERVERS = "localhost:9092";
-private static final String KAFKA_TOPIC = "search-analysisv2";
-```
-
----
-
 ## 🐳 Docker Servisleri
 
-| Servis | Port | Açıklama |
-|--------|------|----------|
-| Zookeeper | 2181 | Kafka koordinatörü |
-| Kafka | 9092, 29092 | Mesaj broker |
-| Kafka UI | 8080 | Web arayüzü |
+| Servis | Port | URL |
+|--------|------|-----|
+| Kafka | 9092 | - |
+| Kafka UI | 8080 | http://localhost:8080 |
+| MongoDB | 27017 | - |
+| Mongo Express | 8082 | http://localhost:8082 |
+| Zookeeper | 2181 | - |
 
-```bash
-# Tüm servisleri başlat
-docker-compose up -d
+**MongoDB Credentials:** admin / admin123
 
-# Logları izle
-docker-compose logs -f kafka
+---
 
-# Servisleri durdur
-docker-compose down
+## 📊 Kafka Mesaj Formatı
+
+```json
+{
+  "search": "telefon",
+  "region": "İstanbul",
+  "current_ts": "2024-01-15 14:30:00",
+  "timestamp": "1705326600000"
+}
 ```
 
 ---
 
-## 📊 Simülasyon Verileri
+## 🔧 Sorun Giderme
 
-### Şehirler
-- Ankara, İstanbul, Mersin, Gaziantep, Samsun
-- Ordu, İzmir, Bursa, Antalya, Adana
-
-### Ürünler
-- bebek bezi, telefon, televizyon, ayakkabı, havlu
-- kitap, laptop, kulaklık, saat, çanta
-
----
-
-## 🤝 Katkıda Bulunma
-
-1. 🍴 Fork yapın
-2. 🌿 Feature branch oluşturun (`git checkout -b feature/yeni-ozellik`)
-3. 💾 Değişikliklerinizi commit edin (`git commit -m 'Yeni özellik ekle'`)
-4. 📤 Branch'i push edin (`git push origin feature/yeni-ozellik`)
-5. 🔄 Pull Request açın
+| Sorun | Çözüm |
+|-------|-------|
+| Kafka bağlantı hatası | Docker çalışıyor mu? `docker ps` |
+| Java module hatası | MAVEN_OPTS'u ayarladın mı? |
+| Hadoop hatası | HADOOP_HOME ayarlandı mı? winutils.exe var mı? |
+| Port meşgul | `netstat -ano \| findstr :PORT` ile kontrol et |
 
 ---
 
-## 📝 Lisans
+## 👥 Katkıda Bulunanlar
 
-Bu proje MIT Lisansı altında lisanslanmıştır.
+- **Yusuf** - *Geliştirici*
 
 ---
 
-## 👤 İletişim
+## 📄 Lisans
 
-Yusuf - [@github](https://github.com/yusuf)
-
-Proje Linki: [https://github.com/yusuf/eticaret-analysis](https://github.com/yusuf/eticaret-analysis)
+Bu proje MIT lisansı altında lisanslanmıştır.
 
 ---
 
 <p align="center">
   ⭐ Projeyi beğendiyseniz yıldız vermeyi unutmayın!
+</p>
+
+<p align="center">
+  Made with ❤️ for Big Data Course
 </p>
